# Raytracing-Voxilizer-Vulkan-Intresection

./: .gitignore  CMakeLists.txt  README.md
common/: obj_loader.h
src/: CMakeLists.txt  VoxelBuilder.cpp  VoxelBuilder.hpp  hello_vulkan.cpp  hello_vulkan.h  main.cpp  octTree.hpp  voxelgrid.hpp  voxelgridAABBstruct.cpp  voxelgridAABBstruct.hpp  voxelgridBool.cpp  voxelgridBool.hpp  voxelgridVecEncoding.cpp  voxelgridVecEncoding.hpp
src/shaders/: host_device.h  raytrace.rint  raytrace2.rchit
